--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -6,23 +6,23 @@
   "main": "index.js",
   "license": "LicenseRef-LICENSE",
   "peerDependencies": {
-    "gatsby": "^2.24.85",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "gatsby": "^2.28.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.0.0",
+    "@emotion/react": "^11.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "babel-plugin-prismjs": "^2.0.1",
     "bootstrap": "^5.0.0-alpha3",
-    "gatsby-image": "^2.4.21",
+    "gatsby-image": "^2.7.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.3.21",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-wordpress-lightbox": "*",
     "gatsby-plugin-wp-seo": "*",
@@ -31,18 +31,18 @@
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.11.0",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "prismjs": "^1.22.0",
-    "react-headroom": "^3.0.0",
+    "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.9.6",
-    "react-icons": "^3.11.0",
-    "react-intersection-observer": "^8.29.1",
+    "react-hook-form": "^6.12.2",
+    "react-icons": "^4.1.0",
+    "react-intersection-observer": "^8.31.0",
     "react-share": "^4.3.1",
+    "sass": "^1.29.0",
     "striptags": "^3.1.1"
   },
   "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
   "devDependencies": {
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13"
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.17"
   }
 }
