--- a/packages/gatsby-theme-wp-ginger-chakra/package.json
+++ b/packages/gatsby-theme-wp-ginger-chakra/package.json
@@ -6,26 +6,26 @@
   "main": "index.js",
   "license": "LicenseRef-LICENSE",
   "peerDependencies": {
-    "gatsby": "^2.24.85",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "gatsby": "^2.28.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "dependencies": {
     "@chakra-ui/gatsby-plugin": "^1.0.0",
-    "@chakra-ui/react": "^1.0.1",
+    "@chakra-ui/react": "^1.0.2",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
     "abril-fatface": "^1.0.1",
     "babel-plugin-prismjs": "^2.0.1",
-    "framer-motion": "^2.9.4",
-    "gatsby-image": "^2.4.21",
+    "framer-motion": "^2.9.5",
+    "gatsby-image": "^2.7.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-plugin-sass": "^2.3.21",
+    "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-typography": "^2.5.13",
+    "gatsby-plugin-typography": "^2.8.0",
     "gatsby-plugin-wordpress-lightbox": "*",
     "gatsby-plugin-wp-seo": "*",
     "gatsby-plugin-wpcf7": "*",
@@ -33,21 +33,21 @@
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.11.0",
     "moment": "^2.29.1",
-    "node-sass": "^4.14.1",
     "prismjs": "^1.22.0",
-    "react-headroom": "^3.0.0",
+    "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.9.6",
-    "react-icons": "^3.11.0",
-    "react-intersection-observer": "^8.29.1",
+    "react-hook-form": "^6.12.2",
+    "react-icons": "^4.1.0",
+    "react-intersection-observer": "^8.31.0",
     "react-share": "^4.3.1",
+    "sass": "^1.29.0",
     "striptags": "^3.1.1",
-    "styled-components": "^5.2.0",
+    "styled-components": "^5.2.1",
     "typeface-abril-fatface": "^1.1.13",
     "typeface-fira-sans": "^1.1.13"
   },
   "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
   "devDependencies": {
-    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.13"
+    "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.17"
   }
 }
