--- a/examples/ginger-new/package.json
+++ b/examples/ginger-new/package.json
@@ -19,10 +19,9 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.85",
+    "gatsby-plugin-root-import": "^2.0.5",
     "@gatsbywpthemes/gatsby-theme-wp-ginger-chakra": "*",
-    "lodash.merge": "^4.6.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
     "prettier": "^2.1.2"
