--- a/packages/gatsby-theme-wp-ginger-chakra/package.json
+++ b/packages/gatsby-theme-wp-ginger-chakra/package.json
@@ -15,6 +15,10 @@
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
+    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
+    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "abril-fatface": "^1.0.1",
     "babel-plugin-prismjs": "^2.0.1",
     "framer-motion": "^3.1.1",
@@ -22,14 +26,11 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-typography": "^2.9.0",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.12.0",
     "moment": "^2.29.1",
