--- a/packages/gatsby-theme-wp-ginger/package.json
+++ b/packages/gatsby-theme-wp-ginger/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@emotion/styled": "^10.0.27",
+    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
+    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
+    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "@theme-ui/presets": "^0.3.0",
     "@theme-ui/typography": "^0.3.0",
     "abril-fatface": "^1.0.1",
@@ -21,15 +25,12 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.3.21",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typography": "^2.5.13",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "graphql-tag": "^2.11.0",
     "grommet": "^2.15.2",
     "grommet-icons": "^4.5.0",
