--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -16,21 +16,21 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
+    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
+    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "babel-plugin-prismjs": "^2.0.1",
     "bootstrap": "^5.0.0-alpha3",
+    "date-fns": "^2.16.1",
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.11.0",
-    "moment": "^2.29.1",
     "prismjs": "^1.22.0",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
