--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -22,6 +22,7 @@
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "babel-plugin-prismjs": "^2.0.1",
     "color": "^3.1.3",
+    "date-fns": "^2.16.1",
     "detect-browser": "^5.2.0",
     "framer-motion": "^3.1.1",
     "gatsby-background-image": "^1.3.1",
@@ -33,7 +34,6 @@
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "polished": "^4.0.5",
     "postcss": "^8.2.1",
