--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -31,6 +31,7 @@
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.11.0",
+    "lodash.uniqby": "^4.7.0",
     "prismjs": "^1.22.0",
     "react-headroom": "^3.1.0",
     "react-helmet": "^6.1.0",
