--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-google-analytics": "^2.8.0",
     "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-google-tagmanager": "^2.8.0",
+    "gatsby-plugin-manifest": "^2.10.0",
     "gatsby-plugin-sharp": "^2.11.1",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-source-filesystem": "^2.8.0",
