--- a/examples/starter-data/package.json
+++ b/examples/starter-data/package.json
@@ -22,6 +22,11 @@
     "@chakra-ui/react": "^1.0.2",
     "@emotion/react": "^11.1.1",
     "@emotion/styled": "^11.0.0",
+    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
+    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
+    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
+    "autoprefixer": "^10.2.1",
     "babel-plugin-prismjs": "^2.0.1",
     "detect-browser": "^5.2.0",
     "framer-motion": "^2.9.5",
@@ -30,18 +35,15 @@
     "gatsby-image": "^2.7.0",
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-postcss": "^3.3.0",
+    "gatsby-plugin-postcss": "^3.5.0",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "moment": "^2.29.1",
     "normalize.css": "^8.0.1",
     "polished": "^4.0.5",
+    "postcss": "^8.2.4",
     "prismjs": "^1.22.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-headroom": "^3.1.0",
@@ -54,6 +56,7 @@
     "sass": "^1.30.0",
     "striptags": "^3.1.1",
     "styled-icons": "^10.22.0",
+    "tailwindcss": "^2.0.2",
     "typeface-ibm-plex-mono": "^1.1.13",
     "typeface-roboto-slab": "^1.1.13",
     "typography": "^0.16.19"
