--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -14,7 +14,9 @@
     "@apollo/client": "^3.3.6",
     "@babel/core": "^7.12.10",
     "@gatsbywpthemes/gatsby-plugin-wordpress-parser": "*",
+    "D": "^1.0.0",
     "add": "^2.0.6",
+    "babel-preset-gatsby": "^0.10.0",
     "disqus-react": "^1.0.10",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-plugin-anchor-links": "^1.2.0",
