--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.6.0",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "graphql-tag": "^2.11.0",
