--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -24,12 +24,12 @@
     "bootstrap": "^5.0.0-alpha3",
     "date-fns": "^2.16.1",
     "gatsby-image": "^2.7.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^3.6.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.7.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
+    "gatsby-plugin-webfonts": "^1.1.4",
     "graphql-tag": "^2.11.0",
     "intersection-observer": "^0.11.0",
     "lodash.uniqby": "^4.7.0",
