--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -27,13 +27,13 @@
     "framer-motion": "^3.1.1",
     "gatsby-background-image": "^1.3.1",
     "gatsby-image": "^2.8.0",
-    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
+    "gatsby-plugin-webfonts": "^1.1.4",
     "lodash.uniqby": "^4.7.0",
     "normalize.css": "^8.0.1",
     "polished": "^4.0.5",
@@ -51,8 +51,6 @@
     "striptags": "^3.1.1",
     "styled-icons": "^10.22.0",
     "tailwindcss": "^2.0.2",
-    "typeface-ibm-plex-mono": "^1.1.13",
-    "typeface-roboto-slab": "^1.1.13",
     "typography": "^0.16.19"
   },
   "devDependencies": {
