--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-sharp": "^2.14.0",
     "gatsby-plugin-sitemap": "^2.12.0",
     "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-source-wordpress": "^4.0.3",
     "gatsby-source-wordpress-experimental": "7.0.5",
     "gatsby-transformer-sharp": "^2.12.0",
     "isomorphic-fetch": "^3.0.0",
