--- a/packages/gatsby-theme-wp-starter/package.json
+++ b/packages/gatsby-theme-wp-starter/package.json
@@ -11,46 +11,12 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@chakra-ui/gatsby-plugin": "^1.0.1",
-    "@chakra-ui/icons": "^1.0.4",
-    "@chakra-ui/react": "^1.2.1",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
-    "babel-plugin-prismjs": "^2.0.1",
-    "color": "^3.1.3",
-    "date-fns": "^2.16.1",
-    "detect-browser": "^5.2.0",
-    "framer-motion": "^3.3.0",
-    "gatsby-background-image": "^1.4.0",
-    "gatsby-plugin-mailchimp": "^5.2.2",
+    "@gatsbywpthemes/gatsby-plugin-gwpt-chakra": "*",
+    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "*",
+    "autoprefixer": "^10.2.4",
     "gatsby-plugin-postcss": "^3.7.0",
-    "gatsby-plugin-react-helmet": "^3.10.0",
-    "gatsby-plugin-root-import": "^2.0.6",
-    "gatsby-plugin-sass": "^2.8.0",
-    "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-webfonts": "^1.1.4",
-    "lodash.uniqby": "^4.7.0",
-    "normalize.css": "^8.0.1",
-    "polished": "^4.1.0",
-    "postcss": "^8.2.4",
-    "prismjs": "^1.23.0",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-headroom": "^3.1.0",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^6.15.1",
-    "react-icons": "^4.1.0",
-    "react-share": "^4.3.1",
-    "react-spinners": "^0.10.4",
-    "remove-trailing-slash": "^0.1.1",
-    "sass": "^1.32.6",
-    "striptags": "^3.1.1",
-    "styled-icons": "^10.27.0",
-    "tailwindcss": "^2.0.2",
-    "typography": "^0.16.19"
+    "postcss": "^8.2.6",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.20"
