--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -10,6 +10,8 @@
     "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
     "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
+    "@wpengine/headless": "^0.6.3",
+    "babel-plugin-prismjs": "^2.0.1",
     "color": "^3.1.3",
     "date-fns": "^2.16.1",
     "detect-browser": "^5.2.0",
@@ -20,7 +22,6 @@
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-webfonts": "^1.1.4",
-    "babel-plugin-prismjs": "^2.0.1",
     "lodash.merge": "^4.6.2",
     "lodash.uniqby": "^4.7.0",
     "normalize.css": "^8.0.1",
