--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -6,35 +6,31 @@
   "main": "index.js",
   "license": "MIT",
   "peerDependencies": {
-    "gatsby": "^2.32.0",
+    "gatsby": "^3.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.7",
+    "@apollo/client": "^3.3.12",
     "@babel/core": "^7.12.13",
     "@gatsbywpthemes/gatsby-plugin-wordpress-parser": "*",
-    "D": "^1.0.0",
-    "add": "^2.0.6",
-    "babel-preset-gatsby": "^0.12.0",
+    "babel-preset-gatsby": "^1.0.0",
     "disqus-react": "^1.0.11",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-google-analytics": "^2.11.0",
-    "gatsby-plugin-google-gtag": "^2.8.0",
-    "gatsby-plugin-google-tagmanager": "^2.11.0",
-    "gatsby-plugin-image": "^0.7.0",
-    "gatsby-plugin-manifest": "^2.12.0",
-    "gatsby-plugin-sharp": "^2.14.0",
-    "gatsby-plugin-sitemap": "^2.12.0",
-    "gatsby-source-filesystem": "^2.11.0",
-    "gatsby-source-wordpress": "^4.0.3",
-    "gatsby-source-wordpress-experimental": "7.0.5",
-    "gatsby-transformer-sharp": "^2.12.0",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-google-gtag": "^3.0.0",
+    "gatsby-plugin-google-tagmanager": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-manifest": "^3.0.0",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-sitemap": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
+    "gatsby-source-wordpress": "^5.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "isomorphic-fetch": "^3.0.0",
     "normalize-path": "^3.0.0",
-    "remove-trailing-slash": "^0.1.1",
-    "yarn": "^1.22.10"
+    "remove-trailing-slash": "^0.1.1"
   },
   "keywords": [
     "gatsby",
