--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -11,7 +11,7 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@emotion/react": "^11.1.1",
+    "@emotion/react": "^11.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -21,8 +21,8 @@
     "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "babel-plugin-prismjs": "^2.0.1",
-    "bootstrap": "^5.0.0-alpha3",
-    "date-fns": "^2.16.1",
+    "bootstrap": "^4.6.0",
+    "date-fns": "^2.19.0",
     "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "gatsby-plugin-root-import": "^2.0.5",
@@ -30,7 +30,7 @@
     "gatsby-plugin-scroll-reveal": "^0.0.7",
     "gatsby-plugin-webfonts": "^2.0.0",
     "graphql-tag": "^2.11.0",
-    "intersection-observer": "^0.11.0",
+    "intersection-observer": "^0.12.0",
     "lodash.uniqby": "^4.7.0",
     "prismjs": "^1.22.0",
     "react-headroom": "^3.1.0",
@@ -38,8 +38,8 @@
     "react-hook-form": "^6.15.4",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
-    "react-share": "^4.3.1",
-    "sass": "^1.29.0",
+    "react-share": "^4.4.0",
+    "sass": "^1.32.8",
     "striptags": "^3.1.1"
   },
   "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
