--- a/packages/gatsby-theme-wp-ginger-chakra/package.json
+++ b/packages/gatsby-theme-wp-ginger-chakra/package.json
@@ -11,39 +11,10 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@chakra-ui/react": "^1.3.4",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.1.5",
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
-    "babel-plugin-prismjs": "^2.0.1",
-    "date-fns": "^2.19.0",
-    "framer-motion": "^3.10.5",
-    "gatsby-plugin-mailchimp": "^5.2.2",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-plugin-sass": "^4.0.2",
-    "gatsby-plugin-scroll-reveal": "^0.0.7",
-    "gatsby-plugin-smoothscroll": "^1.2.0",
-    "gatsby-plugin-typography": "^3.0.0",
-    "gatsby-plugin-webfonts": "^2.0.0",
-    "graphql-tag": "^2.11.0",
-    "intersection-observer": "^0.12.0",
-    "lodash.uniqby": "^4.7.0",
-    "prismjs": "^1.23.0",
-    "react-headroom": "^3.1.0",
-    "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.0.4",
-    "react-icons": "^4.2.0",
-    "react-intersection-observer": "^8.31.0",
-    "react-share": "^4.4.0",
-    "sass": "^1.32.8",
-    "striptags": "^3.1.1",
-    "styled-components": "^5.2.1"
+    "@gatsbywpthemes/gatsby-plugin-gwpt-chakra": "*",
+    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "*",
+    "gatsby-plugin-smoothscroll": "^1.2.0"
   },
-  "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
   "devDependencies": {
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.21"
   }
