--- a/examples/starter-data-nostyles/.env-sample
+++ b/examples/starter-data-nostyles/.env-sample
@@ -1,4 +1,4 @@
 # rename this file to .env and supply the values listed below
 # also make sure they are available to the build tool (e.g. Netlify)
-# notice: variables prexifed with GATSBY_ will be made available to client-side code
+# notice: variables prefixed with GATSBY_ will be made available to client-side code
 # GATSBY_MAILCHIMP_ENDPOINT=https://gmail.us20.list-manage.com/subscribe/post?u={your_value}&amp;id={your_id}
