--- a/examples/starter-data-nostyles/package.json
+++ b/examples/starter-data-nostyles/package.json
@@ -50,7 +50,7 @@
     "react-share": "^4.4.0",
     "react-spinners": "^0.11.0",
     "remove-trailing-slash": "^0.1.1",
-    "sass": "^1.34.0",
+    "sass": "1.32.0",
     "striptags": "^3.1.1",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.29.0",
