--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -10,6 +10,8 @@
     "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
     "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
+    "@wordpress/base-styles": "^3.5.1",
+    "@wordpress/block-library": "^3.2.2",
     "babel-plugin-prismjs": "^2.0.1",
     "color": "^3.1.3",
     "date-fns": "^2.22.1",
@@ -34,7 +36,7 @@
     "react-share": "^4.4.0",
     "react-spinners": "^0.11.0",
     "remove-trailing-slash": "^0.1.1",
-    "sass": "^1.34.0",
+    "sass": "1.32.0",
     "striptags": "^3.1.1",
     "styled-icons": "^10.29.0",
     "typography": "^0.16.21"
