--- a/examples/starter-data/package.json
+++ b/examples/starter-data/package.json
@@ -15,10 +15,14 @@
   },
   "dependencies": {
     "@gatsbywpthemes/gatsby-theme-blog-data": "*",
-    "gatsby": "^3.6.2",
-    "lodash.merge": "^4.6.2"
+    "gatsby": "^3.7.0",
+    "gatsby-plugin-root-import": "^2.0.5",
+    "lodash.merge": "^4.6.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "babel-preset-gatsby": "^1.7.0",
     "prettier": "^2.3.1"
   }
 }
