--- a/packages/gatsby-plugin-gwpt-chakra/package.json
+++ b/packages/gatsby-plugin-gwpt-chakra/package.json
@@ -11,5 +11,10 @@
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.1.5",
     "framer-motion": "^4.1.17"
+  },
+  "peerDependencies": {
+    "gatsby": "^3.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
