--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -40,5 +40,10 @@
     "striptags": "^3.1.1",
     "styled-icons": "^10.34.0",
     "typography": "^0.16.21"
+  },
+  "peerDependencies": {
+    "gatsby": "^3.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
