--- a/packages/gatsby-plugin-wp-seo/package.json
+++ b/packages/gatsby-plugin-wp-seo/package.json
@@ -17,5 +17,10 @@
     "normalize-path": "^3.0.0",
     "react-helmet": "^6.1.0",
     "remove-trailing-slash": "^0.1.1"
+  },
+  "peerDependencies": {
+    "gatsby": "^3.7.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
