--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -9,7 +9,7 @@
     "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
     "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
     "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "1.1.0",
     "@wordpress/base-styles": "^3.5.2",
     "@wordpress/block-library": "^3.2.15",
     "babel-plugin-prismjs": "^2.1.0",
