--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "@gatsbywpthemes/gatsby-theme-wp-bootstrap5",
   "description": "WordPress basic theme for Gatsby using WPGraphQL",
   "author": "Paulina Hetman <info@pehaa.com>",
