--- a/packages/gatsby-plugin-gwpt-packages/package.json
+++ b/packages/gatsby-plugin-gwpt-packages/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@gatsbywpthemes/gatsby-plugin-gwpt-packages",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "common packages for all gatsbywpthemes",
   "main": "index.js",
   "author": "Gatsby WP Themes <contact@gatsbywpthemes.com>",
   "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
-    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "*",
-    "@gatsbywpthemes/gatsby-plugin-wp-seo": "*",
-    "@gatsbywpthemes/gatsby-plugin-wpcf7": "*",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "1.3.0",
+    "@gatsbywpthemes/gatsby-plugin-wordpress-lightbox": "^1.1.0",
+    "@gatsbywpthemes/gatsby-plugin-wp-seo": "^1.1.0",
+    "@gatsbywpthemes/gatsby-plugin-wpcf7": "^1.1.0",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "^1.4.0",
     "@wordpress/base-styles": "^3.5.2",
     "@wordpress/block-library": "^3.2.15",
     "babel-plugin-prismjs": "^2.1.0",
