--- a/packages/gatsby-theme-wp-base/package.json
+++ b/packages/gatsby-theme-wp-base/package.json
@@ -2,7 +2,7 @@
   "name": "@gatsbywpthemes/gatsby-theme-wp-base",
   "description": "WordPress basic theme for Gastby using WPGraphQL",
   "author": "Alexandra Spalato <alexaspalato@gmail.com>",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "index.js",
   "license": "SEE LICENSE IN LICENSE",
   "peerDependencies": {
@@ -11,8 +11,8 @@
     "react-dom": "^17.0.1"
   },
   "dependencies": {
-    "@gatsbywpthemes/gatsby-plugin-gwpt-chakra": "*",
-    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "1.3.0"
+    "@gatsbywpthemes/gatsby-plugin-gwpt-chakra": "^1.1.0",
+    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^1.4.0"
   },
   "devDependencies": {
     "gatsby-plugin-webpack-bundle-analyser-v2": "^1.1.21"
