--- a/packages/gatsby-theme-wp-bootstrap5/package.json
+++ b/packages/gatsby-theme-wp-bootstrap5/package.json
@@ -3,7 +3,7 @@
   "name": "@gatsbywpthemes/gatsby-theme-wp-bootstrap5",
   "description": "WordPress basic theme for Gatsby using WPGraphQL",
   "author": "Paulina Hetman <info@pehaa.com>",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "index.js",
   "license": "SEE LICENSE IN LICENSE",
   "peerDependencies": {
@@ -12,12 +12,12 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
-    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "*",
     "@emotion/react": "^11.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^1.4.0",
     "bootstrap": "^5.0.2"
   },
   "gitHead": "40b579e6c7c310fff0a8568136e33e1f8a1221c4",
