--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "babel-preset-gatsby": "^1.9.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "tailwindcss-base-buttons": "https://github.com/thebakerdev/tailwindcss-base-buttons"
   }
 }
