--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -17,6 +17,7 @@
     "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^1.4.1",
     "@headlessui/react": "^1.3.0",
     "@kunukn/react-collapse": "^2.2.9",
+    "@tailwindcss/aspect-ratio": "^0.3.0",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.3.1",
