--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -19,6 +19,8 @@
     "@kunukn/react-collapse": "^2.2.9",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "@wordpress/base-styles": "^3.5.2",
+    "@wordpress/block-library": "^3.2.15",
     "autoprefixer": "^10.3.1",
     "clsx": "^1.1.1",
     "gatsby": "^3.13.1",
@@ -26,12 +28,14 @@
     "gatsby-plugin-emotion": "^6.9.0",
     "gatsby-plugin-postcss": "^4.9.0",
     "gatsby-plugin-root-import": "^2.0.5",
+    "gatsby-plugin-sass": "^4.13.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.5",
     "prismjs": "^1.22.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "sass": "1.32",
     "tailwindcss": "^2.2.4",
     "tailwindcss-debug-screens": "^2.0.0",
     "twin.macro": "^2.6.1"
