--- a/packages/gatsby-theme-blog-data-light/package.json
+++ b/packages/gatsby-theme-blog-data-light/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.11",
     "@gatsbywpthemes/gatsby-plugin-wordpress-parser": "^1.1.1",
     "gatsby-awesome-pagination": "^0.3.6",
     "gatsby-plugin-anchor-links": "^1.2.1",
