--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -28,6 +28,9 @@
     "gatsby-plugin-emotion": "^7.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-source-filesystem": "^4.0.0",
+    "gatsby-transformer-sharp": "^4.0.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.11",
     "prismjs": "^1.25.0",
