--- a/examples/starter-base-tailwind/package.json
+++ b/examples/starter-base-tailwind/package.json
@@ -37,6 +37,7 @@
     "sass": "1.43",
     "tailwindcss": "^2.2.17",
     "tailwindcss-debug-screens": "^2.2.0",
+    "tailwindcss-triangles": "^4.0.0",
     "twin.macro": "^2.8.0"
   },
   "devDependencies": {
