--- a/examples/starter-base-tailwind/package.json
+++ b/examples/starter-base-tailwind/package.json
@@ -28,6 +28,7 @@
     "gatsby-plugin-emotion": "^7.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
+    "local-storage": "^2.0.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.11",
     "prismjs": "^1.25.0",
@@ -38,7 +39,8 @@
     "tailwindcss": "^2.2.17",
     "tailwindcss-debug-screens": "^2.2.0",
     "tailwindcss-triangles": "^4.0.0",
-    "twin.macro": "^2.8.0"
+    "twin.macro": "^2.8.0",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-gatsby": "^2.0.0",
