--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -24,11 +24,11 @@
     "autoprefixer": "^10.3.7",
     "clsx": "^1.1.1",
     "gatsby": "^4.0.0",
-    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-emotion": "^7.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
     "gatsby-plugin-sharp": "^4.0.0",
+    "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-source-filesystem": "^4.0.0",
     "gatsby-transformer-sharp": "^4.0.0",
     "lodash.merge": "^4.6.2",
@@ -40,7 +40,8 @@
     "sass": "1.43",
     "tailwindcss": "^2.2.17",
     "tailwindcss-debug-screens": "^2.2.0",
-    "twin.macro": "^2.8.0"
+    "twin.macro": "^2.8.0",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-gatsby": "^2.0.0",
