--- a/examples/starter-naked/package.json
+++ b/examples/starter-naked/package.json
@@ -24,10 +24,10 @@
     "autoprefixer": "^10.3.7",
     "clsx": "^1.1.1",
     "gatsby": "^4.0.0",
-    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-emotion": "^7.0.0",
     "gatsby-plugin-postcss": "^5.0.0",
     "gatsby-plugin-sass": "^5.0.0",
+    "gatsby-plugin-use-dark-mode": "^1.4.0",
     "lodash.merge": "^4.6.2",
     "postcss": "^8.3.11",
     "prismjs": "^1.25.0",
@@ -37,7 +37,8 @@
     "sass": "1.43",
     "tailwindcss": "^2.2.17",
     "tailwindcss-debug-screens": "^2.2.0",
-    "twin.macro": "^2.8.0"
+    "twin.macro": "^2.8.0",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-gatsby": "^2.0.0",
