--- a/packages/gatsby-theme-wp-comments/package.json
+++ b/packages/gatsby-theme-wp-comments/package.json
@@ -8,6 +8,12 @@
   "peerDependencies": {
     "gatsby": "^3.9.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@apollo/client": "^3.4.16",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "*"
+  },
+  "dependencies": {
+    "date-fns": "^2.25.0",
+    "react-hook-form": "^7.17.4"
   }
 }
