--- a/packages/gatsby-theme-wp-ginger-pro/package.json
+++ b/packages/gatsby-theme-wp-ginger-pro/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@gatsbywpthemes/gatsby-plugin-gwpt-chakra": "^1.1.1",
     "@gatsbywpthemes/gatsby-plugin-gwpt-packages": "^1.5.1",
+    "@gatsbywpthemes/gatsby-theme-wp-comments": "^1.0.0",
     "gatsby-plugin-smoothscroll": "^1.2.0"
   },
   "devDependencies": {
