--- a/packages/gatsby-theme-wp-comments/package.json
+++ b/packages/gatsby-theme-wp-comments/package.json
@@ -6,14 +6,14 @@
   "main": "index.js",
   "license": "SEE LICENSE IN LICENSE",
   "peerDependencies": {
+    "@apollo/client": "^3.4.16",
+    "@gatsbywpthemes/gatsby-theme-blog-data": "*",
     "gatsby": "^4.0.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@apollo/client": "^3.4.16",
-    "@gatsbywpthemes/gatsby-theme-blog-data": "*"
+    "react-dom": "^17.0.2"
   },
   "dependencies": {
     "date-fns": "^2.25.0",
-    "react-hook-form": "^7.17.4"
+    "react-hook-form": "^7.19.5"
   }
 }
