--- a/packages/gatsby-theme-blog-data/package.json
+++ b/packages/gatsby-theme-blog-data/package.json
@@ -15,14 +15,14 @@
     "@gatsbywpthemes/gatsby-plugin-wordpress-parser": "^1.1.2",
     "gatsby-awesome-pagination": "^0.3.8",
     "gatsby-plugin-anchor-links": "^1.2.1",
-    "gatsby-plugin-google-gtag": "^4.1.0",
-    "gatsby-plugin-google-tagmanager": "^4.1.0",
-    "gatsby-plugin-image": "^2.1.2",
-    "gatsby-plugin-sharp": "^4.1.3",
-    "gatsby-plugin-sitemap": "^5.1.0",
-    "gatsby-source-filesystem": "^4.1.2",
-    "gatsby-source-wordpress": "@6.3.0-alpha-wordpress-image-hydration.5+633909e707",
-    "gatsby-transformer-sharp": "^4.1.0",
+    "gatsby-plugin-google-gtag": "^4.2.0",
+    "gatsby-plugin-google-tagmanager": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-plugin-sitemap": "^5.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-source-wordpress": "^6.2",
+    "gatsby-transformer-sharp": "^4.2.0",
     "isomorphic-fetch": "^3.0.0",
     "normalize-path": "^3.0.0",
     "remove-trailing-slash": "^0.1.1"
