--- a/examples/starter-light/package.json
+++ b/examples/starter-light/package.json
@@ -19,10 +19,12 @@
     "@headlessui/react": "^1.4.1",
     "@kunukn/react-collapse": "^2.2.9",
     "gatsby": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
     "gatsby-plugin-sharp": "^4.2.0",
     "gatsby-plugin-use-dark-mode": "^1.4.0",
     "gatsby-source-filesystem": "^4.2.0",
     "gatsby-transformer-sharp": "^4.2.0",
+    "html-react-parser": "^1.4.0",
     "lodash.merge": "^4.6.2",
     "prismjs": "^1.25.0",
     "react": "^17.0.2",
