--- a/packages/gatsby-plugin-gwpt-tailwind/package.json
+++ b/packages/gatsby-plugin-gwpt-tailwind/package.json
@@ -6,16 +6,21 @@
   "author": "Alexandra Spalato",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@tailwindcss/forms": "^0.3.4",
-    "autoprefixer": "^10.4.0",
     "clsx": "^1.1.1",
-    "gatsby-plugin-emotion": "^7.2.0",
-    "gatsby-plugin-postcss": "^5.2.0",
-    "postcss": "^8.3.11",
+    "gatsby-plugin-emotion": "^7.3.0",
+    "gatsby-plugin-postcss": "^5.3.0",
     "postcss-import": "^14.0.2",
-    "tailwindcss": "^2.2.19",
-    "tailwindcss-debug-screens": "^2.2.0",
-    "twin.macro": "^2.8.1"
+    "twin.macro": "^2.8.2"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.1",
+    "tailwindcss-debug-screens": "^2.2.1",
+    "tailwindcss-triangles": "^4.0.0"
   }
 }
